# cmakeSetup

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  imgui.ini  mygame
include/: platformInput.h  tools.h
include/gameLayer/: gameLayer.h  shader.h
include/mygame/: tools.h
include/platform/: errorReporting.h  imguiTools.h  logs.h  platformInput.h  platformTools.h  stringManipulation.h
resources/: gameData.data  logs.txt
resources/src/platform/: errorReporting.cpp  platformInput.cpp
sources/: main.cpp
src/: glfwMain.cpp  main.cpp  platformInput.cpp
src/gameLayer/: gameLayer.cpp  shader.cpp
src/platform/: glfwMain.cpp  headerOnly.cpp  imguiTools.cpp  logs.cpp  platformInput.cpp  platformTools.cpp  stringManipulation.cpp
